<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title">Judul Event</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="judul_acara">judul_acara</string>
    <string name="penyelenggara_acara">penyelenggara_acara</string>
    <string name="kuota_acara">kuota_acara</string>
    <string name="deskripsi_acara">deskripsi_acara</string>
    <string name="kategori_acara">kategori_acara</string>
    <string name="diselenggarakan_oleh">Diselenggarakan oleh:</string>
    <string name="sisa_kuota">Sisa Kuota:</string>
    <string name="deskripsi">Deskripsi:</string>
    <string name="waktu_mulai_acara">waktu_mulai_acara</string>
    <string name="mulai">Mulai:</string>
    <string name="jadwal_pelaksanaan">Jadwal Pelaksanaan:</string>
    <string name="selesai">Selesai:</string>
    <string name="waktu_selesai_acara">waktu_selesai_acara</string>
    <string name="lokasi">Lokasi:</string>
    <string name="lokasi_acara">lokasi_acara</string>
    <string name="register">Register</string>
    <string name="event_image">event_image</string>
    <string name="retry_event">Muat ulang</string>
    <string name="err_message">ellol</string>
    <string name="error_message">ellol</string>
    <string name="tv_home_finished">Finished Events</string>
    <string name="tv_home_upcoming">Upcoming Events</string>
    <string name="tv_home_title">Dicoding Event</string>
    <string name="search_hint">Cari Event</string>
</resources>